# zero2prod

./: Cargo.toml  README.md
.cargo/: config.toml
migrations/: 20220927143724_create_subscriptions_table.sql
scripts/: init_db.sh
src/: configuration.rs  main.rs  startup.rs
src/routes/: subscriptions.rs
tests/: health_check.rs
