[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11"
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"]}
config = "0.13.0"
# table-like syntax to avoid long lines!
[dependencies.sqlx]
version = "0.6.0"
default-features = false
features = [
    # tell sqlx to use tokio runtime for its futures and rustls as TLS backend ?
    "runtime-tokio-rustls",
    # access to sqlx::query! and sqlx::query_as!
    "macros",
    # enable Postgres-specific fn
    "postgres",
    # support for SQL UUIDs - for the uuid column - uuid crate
    "uuid",
    # map SQL timestamptz to DateTime<T> - chrono crate
    "chrono",
    # access fns from sqlx-cli to manage migrations -> for the test suite
    "migrate"
]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-fuse-ld=/usr/local/bin/zld"]
